samples/_failures_safe/1761187959_5725dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0d37a16.c: In function ‘main’:
./samples/SAFE/__tmp_a0d37a16.c:135:5: error: expected expression at end of input
  135 |     if (len >
      |     ^~
./samples/SAFE/__tmp_a0d37a16.c:135:5: error: expected declaration or statement at end of input
